Tweak JVM config to increase heap size
- Tune heap parameters
  We have seen `java.lang.OutOfMemoryError: Java heap space` errors
  The default heap size is 512mb. Increase to 1024.

  Overview of Heap tuning options:
  https://docs.oracle.com/cd/E19159-01/819-3681/6n5srlhqp/index.html

  The min and max heap ratios determine the min and max amount of free space
  permitted between garbage collections, as a percentage. The defaults are
  40 and 70 resp, according to
  http://www.avricot.com/blog/?post/2010/05/03/Get-started-with-java-JVM-memory-(heap%2C-stack%2C-xss-xms-xmx-xmn...)

- Use Parallel GC instead of ParNew which is deprecated when used with the
  SerialOld Parser.

  See: http://openjdk.java.net/jeps/173